[gd_scene load_steps=12 format=3 uid="uid://cegv7hhwbj0ou"]

[ext_resource type="Script" uid="uid://c3mmk3kuukqsj" path="res://scripts/interactables/spawning.gd" id="1_qu8xk"]
[ext_resource type="PackedScene" uid="uid://b5fg0ygbhuu4g" path="res://scenes/player/player.tscn" id="2_7pwm0"]
[ext_resource type="PackedScene" uid="uid://c0edohu5afmv2" path="res://scenes/reel_tiles/reel_tile.tscn" id="2_jyhfs"]
[ext_resource type="PackedScene" path="res://scenes/ui/pause_menu.tscn" id="3_sugp2"]

[sub_resource type="GDScript" id="GDScript_4c57u"]
script/source = "extends Camera3D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:

	pass # Replace with function body.

# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="CylinderMesh" id="CylinderMesh_q51th"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_h2clf"]
albedo_color = Color(0.5429866, 0.80717915, 0.7696345, 1)

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_jyhfs"]
load_path = "res://.godot/imported/qwantani_noon_puresky_1k.exr 16-11-38-179.exr-1821ddc2a57a1f76f6d3990ba4f969c9.ctex"

[sub_resource type="PanoramaSkyMaterial" id="PanoramaSkyMaterial_q51th"]
panorama = SubResource("CompressedTexture2D_jyhfs")

[sub_resource type="Sky" id="Sky_iyses"]
sky_material = SubResource("PanoramaSkyMaterial_q51th")
radiance_size = 1

[sub_resource type="Environment" id="Environment_f68d1"]
background_mode = 2
background_color = Color(0.20943646, 0.20943646, 0.20943646, 1)
sky = SubResource("Sky_iyses")

[node name="Node3D" type="Node3D"]
process_mode = 1
script = ExtResource("1_qu8xk")
DISTANCE = 3.0
reel_tile = ExtResource("2_jyhfs")

[node name="Camera3D" type="Camera3D" parent="."]
transform = Transform3D(0.9998767, 0.015707226, 1.4328592e-07, -0.01224648, 0.77956975, 0.62619567, 0.009835686, -0.6261184, 0.77966595, 0, 2.29, 4.021)
near = 0.001
far = 3935.05
script = SubResource("GDScript_4c57u")

[node name="CSGBox3D" type="CSGBox3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, -0.424, -6.882)
visible = false
use_collision = true
size = Vector3(4.610962, 0.15234375, 21.799835)

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-1, 2.7510927e-08, -8.298127e-08, 0, 0.9491951, 0.31468832, 8.742278e-08, 0.31468832, -0.9491951, -0.33321542, 1.3283353, -3.9097257)
light_energy = 1.056

[node name="SpawnLocations" type="Node3D" parent="."]
transform = Transform3D(-1, 0, -8.742278e-08, 0, 1, 0, 8.742278e-08, 0, -1, 0, 0, -15.612)

[node name="MeshInstance3D" type="MeshInstance3D" parent="SpawnLocations"]
transform = Transform3D(1, 0, 0, 0, 0.29711223, 0, 0, 0, 1, 1.5, 0, 0)
mesh = SubResource("CylinderMesh_q51th")
surface_material_override/0 = SubResource("StandardMaterial3D_h2clf")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="SpawnLocations"]
transform = Transform3D(1, 0, 0, 0, 0.29711223, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CylinderMesh_q51th")
surface_material_override/0 = SubResource("StandardMaterial3D_h2clf")

[node name="MeshInstance3D3" type="MeshInstance3D" parent="SpawnLocations"]
transform = Transform3D(1, 0, 0, 0, 0.29711223, 0, 0, 0, 1, -1.5, 0, 0)
mesh = SubResource("CylinderMesh_q51th")
surface_material_override/0 = SubResource("StandardMaterial3D_h2clf")

[node name="SpawnTimer" type="Timer" parent="."]

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_f68d1")

[node name="Player" parent="." groups=["player"] instance=ExtResource("2_7pwm0")]
transform = Transform3D(1, 0, 1.7484555e-07, 0, 1, 0, -1.7484555e-07, 0, 1, 0, 0, 2.008)

[node name="PositionLeft" parent="Player" index="1"]
transform = Transform3D(1, 0, -1.4210855e-14, 0, 1, 0, 1.4210855e-14, 0, 1, -1.7078726, 0, 0)

[node name="PositionMiddle" parent="Player" index="2"]
transform = Transform3D(1, 0, -1.4210855e-14, 0, 1, 0, 1.4210855e-14, 0, 1, 5.9604645e-08, 0, 0)

[node name="PositionRight" parent="Player" index="3"]
transform = Transform3D(1, 0, -1.4210855e-14, 0, 1, 0, 1.4210855e-14, 0, 1, 1.3844118, 0, 0)

[node name="Pause Menu" parent="." instance=ExtResource("3_sugp2")]
visible = false

[connection signal="timeout" from="SpawnTimer" to="." method="_on_timer_timeout"]

[editable path="Player"]
